<resources>
    <string name="app_name">Blood Bank</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bloodgrp_prompt">Select bloodgroup</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_application_id">CHANGE-ME</string>
    <string name="facebook_login_protocol_scheme">fbYOUR_APP_ID</string>
    <string name="firebase_web_host">CHANGE-ME</string>
    <string name="fui_accessibility_logo">App logo</string>
    <string name="fui_auto_verified">Phone number automatically verified</string>
    <string name="fui_button_text_save">Save</string>
    <string name="fui_button_text_send">Send</string>
    <string name="fui_cancel">Cancel</string>
    <string name="fui_confirm_recovery_body">Follow the instructions sent to %1$s to recover your password.</string>
    <string name="fui_continue">Continue</string>
    <string name="fui_default_toolbar_title">@string/app_name</string>
    <string name="fui_email_account_creation_error">Email account registration unsuccessful</string>
    <string name="fui_email_field_name">email_field</string>
    <string name="fui_email_hint">Email</string>
    <string name="fui_email_link_confirm_email_header">Confirm email</string>
    <string name="fui_email_link_confirm_email_message">Confirm email to continue sign in</string>
    <string name="fui_email_link_cross_device_linking_text">"You originally intended to connect %1$s to your email account but have opened the link on a different device where you are not signed in.

If you still want to connect your %1$s account, open the link on the same device where you started sign-in. Otherwise, tap Continue to sign-in on this device."</string>
    <string name="fui_email_link_cross_device_sign_in_button_text">Sign in with %1$s</string>
    <string name="fui_email_link_different_anonymous_user_header">Session ended</string>
    <string name="fui_email_link_different_anonymous_user_message">The session associated with this sign-in request has either expired or was cleared.</string>
    <string name="fui_email_link_dismiss_button">Dismiss</string>
    <string name="fui_email_link_email_sent">A sign-in email with additional instructions was sent to %1$s. Check your email to complete sign-in.</string>
    <string name="fui_email_link_header">"Sign-in email sent
"</string>
    <string name="fui_email_link_invalid_link_header">Unable to complete sign in</string>
    <string name="fui_email_link_invalid_link_message">The action code is invalid. This can happen if the code is malformed, expired, or has already been used.</string>
    <string name="fui_email_link_resend">Resend</string>
    <string name="fui_email_link_trouble_getting_email_header">Trouble getting email?</string>
    <string name="fui_email_link_trouble_getting_email_resend_solution">"If the steps above didn't work, you can resend the email. Note that this will deactivate the link in the older email."</string>
    <string name="fui_email_link_trouble_getting_possible_fixes">"Try these common fixes:
• Check if the email was marked as spam or filtered.
• Check your internet connection.
• Check that you did not misspell your email.
• Check that your inbox space is not running out or other inbox setting related issues.
"</string>
    <string name="fui_email_link_wrong_device_header">New device or browser detected.</string>
    <string name="fui_email_link_wrong_device_message">Try opening the link using the same device or browser where you started the sign-in process.</string>
    <string name="fui_enter_confirmation_code">Enter the 6-digit code we sent to</string>
    <string name="fui_error_email_does_not_exist">"That email address doesn't match an existing account"</string>
    <string name="fui_error_invalid_password">Incorrect password.</string>
    <string name="fui_error_quota_exceeded">There was a problem verifying your phone number</string>
    <string name="fui_error_session_expired">This code is no longer valid</string>
    <string name="fui_error_too_many_attempts">This phone number has been used too many times</string>
    <string name="fui_error_unknown">An unknown error occurred.</string>
    <string name="fui_idp_name_email">Email</string>
    <string name="fui_idp_name_facebook">Facebook</string>
    <string name="fui_idp_name_github">GitHub</string>
    <string name="fui_idp_name_google">Google</string>
    <string name="fui_idp_name_phone">Phone</string>
    <string name="fui_idp_name_twitter">Twitter</string>
    <string name="fui_incorrect_code_dialog_body">Wrong code. Try again.</string>
    <string name="fui_invalid_email_address">"That email address isn't correct"</string>
    <string name="fui_invalid_phone_number">Enter a valid phone number</string>
    <string name="fui_missing_email_address">Enter your email address to continue</string>
    <string name="fui_missing_first_and_last_name">Please enter a first and last name.</string>
    <string name="fui_name_hint">First &amp; last name</string>
    <string name="fui_next_default">Next</string>
    <string name="fui_no_internet">Network error, check your internet connection.</string>
    <string name="fui_password_hint">Password</string>
    <string name="fui_password_recovery_body">Get instructions sent to this email that explain how to reset your password.</string>
    <string name="fui_phone_hint">Phone Number</string>
    <string name="fui_privacy_policy">Privacy Policy</string>
    <string name="fui_progress_dialog_checking_accounts">Checking for existing accounts…</string>
    <string name="fui_progress_dialog_loading">Loading…</string>
    <string name="fui_progress_dialog_sending">Sending…</string>
    <string name="fui_progress_dialog_signing_in">Signing in…</string>
    <string name="fui_progress_dialog_signing_up">Signing up…</string>
    <string name="fui_required_field">"You can't leave this empty."</string>
    <string name="fui_resend_code">Resend Code</string>
    <string name="fui_resend_code_in">Resend code in 0:%02d</string>
    <string name="fui_sign_in_anonymously">Continue as guest</string>
    <string name="fui_sign_in_default">Sign in</string>
    <string name="fui_sign_in_with_email">Sign in with email</string>
    <string name="fui_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="fui_sign_in_with_github">Sign in with GitHub</string>
    <string name="fui_sign_in_with_google">Sign in with Google</string>
    <string name="fui_sign_in_with_phone">Sign in with phone</string>
    <string name="fui_sign_in_with_phone_number">Sign in with phone number</string>
    <string name="fui_sign_in_with_twitter">Sign in with Twitter</string>
    <string name="fui_sms_terms_of_service">By tapping “%1$s”, an SMS may be sent. Message &amp; data rates may apply.</string>
    <string name="fui_sms_terms_of_service_and_privacy_policy_extended">By tapping “%1$s”, you are indicating that you accept our %2$s and %3$s. An SMS may be sent. Message &amp; data rates may apply.</string>
    <string name="fui_terms_of_service">Terms of Service</string>
    <string name="fui_title_confirm_recover_password">Check your email</string>
    <string name="fui_title_recover_password_activity">Recover password</string>
    <string name="fui_title_register_email">Sign up</string>
    <string name="fui_title_welcome_back_idp_prompt">@string/fui_sign_in_default</string>
    <string name="fui_title_welcome_back_password_prompt">@string/fui_sign_in_default</string>
    <string name="fui_tos_and_pp">By continuing, you are indicating that you accept our %1$s and %2$s.</string>
    <string name="fui_tos_and_pp_footer">%1$s     %2$s</string>
    <string name="fui_trouble_signing_in">Trouble signing in?</string>
    <string name="fui_verify_phone_number">Verify Phone Number</string>
    <string name="fui_verify_phone_number_title">Enter your phone number</string>
    <string name="fui_verify_your_phone_title">Verify your phone number</string>
    <string name="fui_verifying">Verifying…</string>
    <string name="fui_welcome_back_email_header">Welcome back!</string>
    <string name="fui_welcome_back_email_link_header">"You already have an account
"</string>
    <string name="fui_welcome_back_email_link_prompt_body">"You've already used %1$s. You can connect your %2$s account with %1$s by signing in with email link below.

For this flow to successfully connect your %2$s account with this email, you have to open the link on the same device or browser."</string>
    <string name="fui_welcome_back_idp_header">You already have an account</string>
    <string name="fui_welcome_back_idp_prompt">"You've already used %1$s. Sign in with %2$s to continue."</string>
    <string name="fui_welcome_back_password_prompt_body">"You've already used %1$s to sign in. Enter your password for that account."</string>
    <string name="gender_prompt">Choose your gender</string>
    <string name="github_client_id">CHANGE-ME</string>
    <string name="github_client_secret">CHANGE-ME</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="input_password">Input Password</string>
    <string name="input_phone_number">Input Phone Number</string>
    <string name="login">Login</string>
    <string name="login_page_image">Login page image</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_blood_bank">Select Blood Bank</string>
    <string name="select_location">Select Location</string>
    <string name="sign_up">Sign Up</string>
</resources>