<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="35dp"
                android:text="Location"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bloodbanktxt" />

            <Spinner
                android:id="@+id/requestbloodbank"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/select_blood_bank"
                android:entries="@array/blood_bank_arrays"
                android:popupBackground="@color/colorBackground"
                android:prompt="@string/select_blood_bank"
                android:spinnerMode="dropdown"
                android:theme="@style/spinnerTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/bloodbanktxt"
                app:layout_constraintTop_toBottomOf="@+id/requestbloodgrp" />

            <Spinner
                android:id="@+id/requestbloodgrp"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:entries="@array/bloodgrp_arrays"
                android:popupBackground="@color/colorBackground"
                android:prompt="@string/bloodgrp_prompt"
                android:theme="@style/spinnerTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/bloodGrpTxt"
                app:layout_constraintTop_toBottomOf="@+id/noOfDonors" />

            <Spinner
                android:id="@+id/requestlocation"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:entries="@array/locations_arrays"
                android:popupBackground="@color/colorBackground"
                android:prompt="@string/select_location"
                android:theme="@style/spinnerTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/location"
                app:layout_constraintTop_toBottomOf="@+id/requestbloodbank" />

            <TextView
                android:id="@+id/bloodGrpTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="35dp"
                android:text="Blood Group"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noOfDonorsTxt" />

            <TextView
                android:id="@+id/noOfDonorsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="316dp"
                android:text="Number of Donors"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bloodbanktxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="35dp"
                android:text="Blood Bank"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bloodGrpTxt" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="215dp"
                android:layout_height="235dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/request_page" />

            <EditText
                android:id="@+id/noOfDonors"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/noOfDonorsTxt"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <Button
                android:id="@+id/buttonRequestPage"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@color/colorPrimary"
                android:text="Request"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/requestlocation"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>